Center intro text and fix spacing after first <p>

--- a/style.css
+++ b/style.css
@@ -201,17 +201,25 @@ header .logo {
 
 .intro {
     font-size: calc(.9rem + 1vw);
-    max-width: 1100px;
-    margin: 0 10vw 2vh;
+    width: 85vw;
+    max-width: 80rem;
+    margin: 0 7.5vw 2vh;
     display: flex;
+    gap: 2vh;
     flex-direction: column;
-    gap: 2.5vh;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .graces-web-portal {
     color: blue;
     font-family: 'Helico Centrica';
     text-shadow: 0 0 5px rgb(47, 255, 0);
+}
+
+.p2 {
+    margin-top: -1.5vh;
 }
 
 .contact,
